demo-app/base/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-app-msparr-com
  namespace: demo-app
  annotations:
    #kubernetes.io/ingress.class: "kong"
    #kubernetes.io/tls-acme: "true"
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    #konghq.com/plugins: request-id
spec:
#  tls:
#  - secretName: tls-demo-app-msparr-com
#    hosts:
#      - demo-app.msparr.com
  rules:
  - host: demo-app.msparr.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-app
          servicePort: 80
